fix: [IOBP-1986] fix size and alignment of the spinner in buttons

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -2,6 +2,13 @@
   cursor: pointer;
 }
 
+.small-spinner {
+  .progress-spinner  {
+    width: 24px;
+    height: 24px;
+  }
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
